--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "nedb": "~0.9.4",
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "underscore": "~1.5.2"
   }
 }
